--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.13.4",
     "badge-maker": "^5.0.2",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "postcss": "^8.4.49",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
